# Simulations_proj1

./: CMakeLists.txt  README.md
ParticleToy/: CircularWireConstraint.cpp  CircularWireConstraint.h  Constraint.cpp  Constraint.h  ConstraintForce.cpp  ConstraintForce.h  EulerianSolver.cpp  EulerianSolver.h  EulerianVecSolver.cpp  EulerianVecSolver.h  Force.cpp  Force.h  ForwardEulerianSolver.cpp  ForwardEulerianSolver.h  GravityForce.cpp  GravityForce.h  MidPointSolver.cpp  MidPointSolver.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  ParticleToy.cpp  RodConstraint.cpp  RodConstraint.h  Runge4Solver.cpp  Runge4Solver.h  SceneBuilder.cpp  SceneBuilder.h  Solver.cpp  Solver.h  SparseMatrix.cpp  SparseMatrix.h  SpringForce.cpp  SpringForce.h  linearSolver.cpp  linearSolver.h
ParticleToy/constraints/: CircularWireConstraint.cpp  CircularWireConstraint.h  Constraint.h  ConstraintSolver.cpp  ConstraintSolver.h  DotConstraint.cpp  DotConstraint.h  LineConstraint.cpp  LineConstraint.h  RodConstraint.cpp  RodConstraint.h  WallConstraint.cpp  WallConstraint.h
ParticleToy/forces/: AngularSpringForce.cpp  AngularSpringForce.h  DampeningForce.cpp  DampeningForce.h  FloorForce.cpp  FloorForce.h  Force.h  GravityForce.cpp  GravityForce.h  SpringForce.cpp  SpringForce.h  StaticForce.cpp  StaticForce.h  WallForce.cpp  WallForce.h
ParticleToy/include/gfx/: gfx.h
ParticleToy/objects/: Cloth.cpp  Cloth.h
ParticleToy/solvers/: EulerianSolver.cpp  ForwardEulerianSolver.cpp  ForwardEulerianSolver.h  ImplicitEulerSolver.cpp  ImplicitEulerSolver.h  MidPointSolver.cpp  MidPointSolver.h  Runge4Solver.cpp  Runge4Solver.h  Solver.cpp  Solver.h
